work in progress

--- a/doc/bibliography.bib
+++ b/doc/bibliography.bib
@@ -1,4 +1,16 @@
 
+@misc{fftw-2dmpi,
+  Author = {Matteo Frigo and Steven~G. Johnson},
+  Title = {{FFTW} users manual: 2d MPI example},
+  Url = {http://www.fftw.org/fftw3_doc/2d-MPI-example.html#g_t2d-MPI-example}
+}
+
+@misc{fftw-rdft,
+  Author = {Matteo Frigo and Steven~G. Johnson},
+  Title = {{FFTW} users manual: Real-data DFTs},
+  Url = {http://www.fftw.org/fftw3_doc/Real_002ddata-DFTs.html#Real_002ddata-DFTs}
+}
+
 
 @misc{fftw-manual,
   Author = {Matteo Frigo and Steven~G. Johnson},
